cert-manager/test/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-logo-ingress
  namespace: logos
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: rancher-logo-k3s-ruan-dev-tls
      hosts:
        - rancher-logo.jameselgar.com
  rules:
  - host: rancher-logo.jameselgar.com
    http:
      paths:
        - path: /
          backend:
            serviceName: rancher-logo-service
            servicePort: 80
